# validate.js
@@ -24,7 +24,7 @@ const userValidate = [
 const enemyValidate = [
     check('name', 'Minimum 3 characters.').exists().isLength({ min: 3 }).trim().escape(),
     check('hit_points').trim().isNumeric(),
-    check('image_url').trim().isLength({ min: 3 }).escape(),
+    check('image_url').trim().escape(),
 ]
 
 const powerupValidate = [
@@ -32,7 +32,7 @@ const powerupValidate = [
     check('health_boost').trim().isNumeric(),
     check('speed_boost').trim().isNumeric(),
     check('defense_boost').trim().isNumeric(),
-    check('image_url').trim().isLength({ min: 3 }).escape(),
+    check('image_url').trim().escape(),
 ]
 
 module.exports = { levelValidate, userValidate, enemyValidate, powerupValidate };
